--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>梁洪亮的个人简历</title>
-    <link rel="stylesheet" href="./a.CSS">
+    <link rel="stylesheet" href="./a.css">
 </head>
 
 <body>
