--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+
+    <div class="site-welcome active">
+        <div class="loading"></div>
+    </div>
+
+
+
     <div class="topnavbar">
         <div class="topnavbar-inner clearfix">
             <a class="logo" href="#" alt="logo" style="float: left;">
@@ -65,7 +72,7 @@
             </footer>
         </div>
         <p class="download-wrapper">
-            <a class="download" href="./resume.txt"  download>下载PDF简历</a>
+            <a class="download" href="./resume.txt" download>下载PDF简历</a>
         </p>
 
         <p class="selfintrdction">
