--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <body>
 
-    <div class="site-welcome active">
+    <div id='siteWelcome' class="site-welcome active">
         <div class="loading"></div>
     </div>
 
-    <div class="topnavbar">
+    <div id="topNavBar"class="topnavbar">
         <div class="topnavbar-inner clearfix">
             <a class="logo" href="#" alt="logo" style="float: left;">
                 <span class="rs">RS</span><span class="card">card</span>
@@ -146,6 +146,19 @@
             <div class="small"></div>
         </div>
     </section>
+    <script>
+        setTimeout(function () {
+            siteWelcome.classList.remove('active')
+        }, 1000)
+     window.onscroll = function(xxxxx){
+         if(window.scrollY > 0){
+             topNavBar.classList.add('sticky')
+         }else{
+            topNavBar.classList.remove('sticky')
+         }
+     }   
+    </script>
+
 </body>
 
 
