--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="loading"></div>
     </div>
 
-    <div id="topNavBar"class="topnavbar">
+    <div id="topNavBar" class="topnavbar">
         <div class="topnavbar-inner clearfix">
             <a class="logo" href="#" alt="logo" style="float: left;">
                 <span class="rs">RS</span><span class="card">card</span>
@@ -21,8 +21,20 @@
                 <ul class="clearfix">
                     <li><a href="#">关于</a></li>
                     <li><a href="#">技能</a></li>
-                    <li><a href="#">作品</a></li>
-                    <li><a href="#">博客</a></li>
+                    <li><a class="menuTigger" href="#">作品</a>
+                        <ul class="submenu">
+                            <li>作品1</li>
+                            <li>作品2</li>
+                            <li>作品3</li>
+                        </ul>
+                    </li>
+                    <li><a class="menuTigger" href="#">博客</a>
+                        <ul class="submenu">
+                            <li>博客1</li>
+                            <li>博客2</li>
+                            <li>博客3</li>
+                        </ul>
+                    </li>
                     <li><a href="#">日历</a></li>
                     <li><a href="#">联系方式</a></li>
                     <li><a href="#">其他</a> </li>
@@ -41,8 +53,7 @@
                     <img src="./img/lhl.jpg" width="260" height="347" alt="头像">
                 </div>
                 <div class="text">
-                    <span class="welcome">hello
-                        <span class="triangle"></span>
+                    <span class="welcome">hello<span class="triangle"></span>
                     </span>
                     <h1>梁子</h1>
                     <p>前端开发工程师</p>
@@ -150,13 +161,23 @@
         setTimeout(function () {
             siteWelcome.classList.remove('active')
         }, 1000)
-     window.onscroll = function(xxxxx){
-         if(window.scrollY > 0){
-             topNavBar.classList.add('sticky')
-         }else{
-            topNavBar.classList.remove('sticky')
-         }
-     }   
+        window.onscroll = function (xxxxx) {
+            if (window.scrollY > 0) {
+                topNavBar.classList.add('sticky')
+            } else {
+                topNavBar.classList.remove('sticky')
+            }
+        }
+        let aTags = document.getElementsByClassName('menuTigger')
+        for (let i = 0; i < aTags.length; i++) {
+            aTags[i].onmouseenter = function (x) {
+                let a = x.currentTarget
+                let brother = a.nextSibling
+                while (brother.nodeType === 3){
+                    brother = brother.nextSibling
+                }
+            }
+        }
     </script>
 
 </body>
