--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
             <a class="logo" href="#" alt="logo" style="float: left;">
                 <span class="rs">RS</span><span class="card">card</span>
             </a>
-            <nav style="float: right;">
+            <nav class="menu" style="float: right;">
                 <ul class="clearfix">
                     <li><a href="#">关于</a></li>
                     <li><a href="#">技能</a></li>
-                    <li><a class="menuTigger" href="#">作品</a>
+                    <li>
+                        <a href="#">作品</a>
                         <ul class="submenu">
                             <li>作品1</li>
                             <li>作品2</li>
                             <li>作品3</li>
                         </ul>
                     </li>
-                    <li><a class="menuTigger" href="#">博客</a>
+                    <li>
+                        <a href="#">博客</a>
                         <ul class="submenu">
                             <li>博客1</li>
                             <li>博客2</li>
@@ -168,14 +170,13 @@
                 topNavBar.classList.remove('sticky')
             }
         }
-        let aTags = document.getElementsByClassName('menuTigger')
-        for (let i = 0; i < aTags.length; i++) {
-            aTags[i].onmouseenter = function (x) {
-                let a = x.currentTarget
-                let brother = a.nextSibling
-                while (brother.nodeType === 3){
-                    brother = brother.nextSibling
-                }
+        let liTags = document.querySelectorAll('nav.menu> ul > li')
+        for (let i = 0; i < liTags.length; i++) {
+            liTags[i].onmouseenter = function (x) {
+                x.currentTarget.classList.add('active')
+            }
+            liTags[i].onmouseleave = function (x) {
+                x.currentTarget.classList.remove('active')
             }
         }
     </script>
