页面滚动到指定元素位置

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             </a>
             <nav class="menu" style="float: right;">
                 <ul class="clearfix">
-                    <li><a href="#">关于</a></li>
-                    <li><a href="#">技能</a></li>
+                    <li><a href="#siteAbout">关于</a></li>
+                    <li><a href="#siteSkills">技能</a></li>
                     <li>
-                        <a href="#">作品</a>
+                        <a href="#siteWorks">作品</a>
                         <ul class="submenu">
                             <li>作品1</li>
                             <li>作品2</li>
@@ -48,8 +48,8 @@
     <div class="banner">
         <div class="mask"></div>
     </div>
-    <main class="margin-top">
-        <div class="percard">
+    <main>
+        <div id="siteAbout" class="percard">
             <div class="pictureandtext clearfix">
                 <div class="picture">
                     <img src="./img/lhl.jpg" width="260" height="347" alt="头像">
@@ -91,7 +91,7 @@
             技能：前端开发，Rails 开发，Node.js 开发。
         </p>
     </main>
-    <section class="skills">
+    <section id="siteSkills" class="skills">
         <h2>技能</h2>
         <ol class="clearfix">
             <li>
@@ -144,7 +144,7 @@
             </li>
         </ol>
     </section>
-    <section>
+    <section id="siteWorks">
         <h2>作品集</h2>
         <nav>
             <ol>
@@ -177,6 +177,17 @@
             }
             liTags[i].onmouseleave = function (x) {
                 x.currentTarget.classList.remove('active')
+            }
+        }
+        let aTags = document.querySelectorAll('nav.menu> ul > li > a')
+        for (let i = 0; i < aTags.length; i++) {
+            aTags[i].onclick = function (x) {
+                x.preventDefault()
+                let a = x.currentTarget
+                let href = a.getAttribute('href')
+                let element = document.querySelector(href)
+                let top = element.offsetTop
+                window.scrollTo(0,top - 80)
             }
         }
     </script>
