--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     HTML 5 & CSS 3
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width:30%"></div>
                 </div>
             </li>
             <li>
@@ -138,7 +138,7 @@
                     javaScript
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width:60%"></div>
                 </div>
             </li>
             <li>
@@ -146,7 +146,7 @@
                     jQuery
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width:80%"></div>
                 </div>
             </li>
             <li>
@@ -154,7 +154,7 @@
                     Vue.js
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width:50%"></div>
                 </div>
             </li>
             <li>
@@ -162,7 +162,7 @@
                     React.js
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width:40%"></div>
                 </div>
             </li>
             <li>
@@ -170,24 +170,44 @@
                     Node.js
                 </h3>
                 <div class="progressBar">
-                    <div class="progress"></div>
+                    <div class="progress" style="width:70%"></div>
                 </div>
             </li>
         </ol>
     </section>
-    <section id="siteWorks">
+    <section id="siteWorks" class="portfolio">
         <h2>作品集</h2>
         <nav>
-            <ol>
-                <li>所有</li>
-                <li>框架</li>
-                <li>原生JS&CSS</li>
+            <ol class="clearfix">
+                <li id="all">所 有</li>
+                <li id="framework">框 架</li>
+                <li id="vallina">原生JS&CSS</li>
             </ol>
+            <div id="bar" class="bar state-1">
+                <div class="bar-inner"></div>
+            </div>
         </nav>
-        <div class="jobs">
-            <div class="big"></div>
-            <div class="small"></div>
-            <div class="small"></div>
+        <script>
+            all.onclick = function () {
+                bar.className = 'bar state-1'
+            }
+            framework.onclick = function () {
+                bar.className = 'bar state-2'
+            }
+            vallina.onclick = function () {
+                bar.className = 'bar state-3'
+            }
+        </script>
+        <div class="works" style="height:597px;">
+            <div class="big" style="top: 0; left:0;">
+                <img src="./img/1.jpg" alt="作品1">
+            </div>
+            <div class="small" style="top: 0; left:645px;">
+                <img src="./img/2.jpg" alt="作品2">
+            </div>
+            <div class="small" style="top: 312px; left:645px;">
+                <img src="./img/3.jpg" alt="作品3">
+            </div>
         </div>
     </section>
     <script>
