页面跳转及缓动

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="text">
                     <span class="welcome">hello<span class="triangle"></span>
                     </span>
-                    <h1>梁子</h1>
+                    <h1>梁洪亮</h1>
                     <p>前端开发工程师</p>
                     <hr>
                     <dl>
@@ -210,6 +210,7 @@
             </div>
         </div>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
     <script>
         setTimeout(function () {
             siteWelcome.classList.remove('active')
@@ -231,6 +232,12 @@
             }
         }
         let aTags = document.querySelectorAll('nav.menu> ul > li > a')
+        function animate(time) {
+            requestAnimationFrame(animate);
+            TWEEN.update(time);
+        }
+        requestAnimationFrame(animate);
+
         for (let i = 0; i < aTags.length; i++) {
             aTags[i].onclick = function (x) {
                 x.preventDefault()
@@ -238,9 +245,25 @@
                 let href = a.getAttribute('href')
                 let element = document.querySelector(href)
                 let top = element.offsetTop
-                window.scrollTo(0, top - 80)
+
+                let currentTop = window.scrollY
+                let targetTop = top - 80
+                let s = targetTop - currentTop // 路程
+                var coords = { y: currentTop }; // 起始位置
+                var t = Math.abs((s / 100) * 300) // 时间
+                if (t > 500) { t = 500 }
+                var tween = new TWEEN.Tween(coords) // 起始位置
+                    .to({ y: targetTop }, t) // 结束位置 和 时间
+                    .easing(TWEEN.Easing.Cubic.InOut) // 缓动类型
+                    .onUpdate(function () {
+                        // coords.y 已经变了
+                        window.scrollTo(0, coords.y) // 如何更新界面
+                    })
+                    .start(); // 开始缓动
             }
+
         }
+        
     </script>
 
 </body>
