--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="mask"></div>
     </div>
     <main>
-        <div id="siteAbout" class="percard">
+        <div data-x id="siteAbout" class="percard">
             <div class="pictureandtext clearfix">
                 <div class="picture">
                     <img src="./img/lhl.jpg" width="260" height="347" alt="头像">
@@ -122,7 +122,7 @@
             技能：前端开发，Rails 开发，Node.js 开发。
         </p>
     </main>
-    <section id="siteSkills" class="skills">
+    <section data-x id="siteSkills" class="skills">
         <h2>技能</h2>
         <ol class="clearfix">
             <li>
@@ -175,7 +175,7 @@
             </li>
         </ol>
     </section>
-    <section id="siteWorks" class="portfolio">
+    <section data-x id="siteWorks" class="portfolio">
         <h2>作品集</h2>
         <nav>
             <ol class="clearfix">
@@ -215,13 +215,46 @@
         setTimeout(function () {
             siteWelcome.classList.remove('active')
         }, 1000)
-        window.onscroll = function (xxxxx) {
+        window.onscroll = function (x) {
             if (window.scrollY > 0) {
                 topNavBar.classList.add('sticky')
             } else {
                 topNavBar.classList.remove('sticky')
             }
+
+
+
+
+
+            let specialTags = document.querySelectorAll('[data-x]')
+            let minIndex = 0
+            for (let i = 1; i < specialTags.length; i++) {
+                if (Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)) {
+                    minIndex = i
+                }
+            }
+            for (let i = 0; i < specialTags.length; i++) {
+                specialTags[i].classList.remove('active')
+            }
+
+            specialTags[minIndex].classList.add('active')
+            let id = specialTags[minIndex].id
+            let a = document.querySelector('a[href="#' + id + '"]')
+            let li = a.parentNode
+            let brothersAndMe = li.parentNode.children
+            for (let i = 0; i < brothersAndMe.length; i++) {
+                brothersAndMe[i].classList.remove('active')
+            }
+            li.classList.add('active')
+
         }
+
+
+
+
+
+
+
         let liTags = document.querySelectorAll('nav.menu> ul > li')
         for (let i = 0; i < liTags.length; i++) {
             liTags[i].onmouseenter = function (x) {
@@ -263,7 +296,7 @@
             }
 
         }
-        
+
     </script>
 
 </body>
