页面内的动画

--- a/index.html
+++ b/index.html
@@ -14,17 +14,9 @@
             overflow: hidden;
         }
     </style>
-
-
-
 </head>
 
 <body>
-
-    <div id='siteWelcome' class="site-welcome active">
-        <div class="loading"></div>
-    </div>
-
     <div id="topNavBar" class="topnavbar">
         <div class="topnavbar-inner clearfix">
             <a class="logo" href="#" alt="logo" style="float: left;">
@@ -212,20 +204,22 @@
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.1.1/Tween.min.js"></script>
     <script>
-        setTimeout(function () {
-            siteWelcome.classList.remove('active')
-        }, 1000)
+        // 添加 offset 类
+        let specialTags = document.querySelectorAll('[data-x]')
+        for (let i = 0; i < specialTags.length; i++) {
+            specialTags[i].classList.add('offset')
+        }
+        findClosest()
         window.onscroll = function (x) {
             if (window.scrollY > 0) {
                 topNavBar.classList.add('sticky')
             } else {
                 topNavBar.classList.remove('sticky')
             }
+            findClosest()
+        }
 
-
-
-
-
+        function findClosest() {
             let specialTags = document.querySelectorAll('[data-x]')
             let minIndex = 0
             for (let i = 1; i < specialTags.length; i++) {
@@ -233,27 +227,17 @@
                     minIndex = i
                 }
             }
-            for (let i = 0; i < specialTags.length; i++) {
-                specialTags[i].classList.remove('active')
-            }
-
-            specialTags[minIndex].classList.add('active')
+            // minIndex 就是里窗口顶部最近的元素
+            specialTags[minIndex].classList.remove('offset')
             let id = specialTags[minIndex].id
             let a = document.querySelector('a[href="#' + id + '"]')
             let li = a.parentNode
             let brothersAndMe = li.parentNode.children
             for (let i = 0; i < brothersAndMe.length; i++) {
-                brothersAndMe[i].classList.remove('active')
+                brothersAndMe[i].classList.remove('highlight')
             }
-            li.classList.add('active')
-
+            li.classList.add('highlight')
         }
-
-
-
-
-
-
 
         let liTags = document.querySelectorAll('nav.menu> ul > li')
         for (let i = 0; i < liTags.length; i++) {
@@ -296,6 +280,7 @@
             }
 
         }
+
 
     </script>
 
